--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ scripts: |
     <ul>
       <li>Automatically <b>size</b> and <b>position</b> components</li>
       <li><b>Layer</b> components and charts by z-index</li>
-      <li><b>Responsize by default</b>, with automatic scaling</li>
+      <li><b>Responsive by default</b>, with automatic scaling</li>
     </ul>
   </div>
   <div class="col-md-4">
