TEMP Remove Github buttons
Getting SAMEORIGIN issues, will add back once resolved

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ scripts: |
       <div class="home-links">
         <a class="btn btn-lg home-call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
 
-        <div class="home-github-links">
+        <!-- <div class="home-github-links">
           <iframe src="https://ghbtns.com/github-btn.html?user=csnw&repo=d3.compose&type=star&count=true&size=large" frameborder="0" scrolling="0" width="150px" height="30px"></iframe>
           <iframe src="https://ghbtns.com/github-btn.html?user=csnw&repo=d3.compose&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="150px" height="30px"></iframe>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
