Remove bower dev dependency

--- a/example/debug.html
+++ b/example/debug.html
@@ -47,11 +47,11 @@
     </ul>
   </div>
 
-  <script src="../bower_components/d3/d3.js"></script>
-  <script src="../bower_components/d3.chart/d3.chart.js"></script>
+  <script src="../node_modules/d3/d3.js"></script>
+  <script src="../node_modules/d3.chart/d3.chart.js"></script>
   <script src="../_tmp/d3.compose-all.js"></script>
 
-  <script src="../bower_components/jquery/dist/jquery.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.js"></script>
 
   <script type="text/javascript">
   var chart = d3.select('#chart').chart('Compose').width(600).height(400);
