--- a/example/index.html
+++ b/example/index.html
@@ -23,8 +23,8 @@
     }
   </style>
 
-  <script src="../bower_components/d3/d3.js"></script>
-  <script src="../bower_components/d3.chart/d3.chart.js"></script>
+  <script src="../node_modules/d3/d3.js"></script>
+  <script src="../node_modules/d3.chart/d3.chart.js"></script>
 
   <script src="../_tmp/d3.compose-all.js"></script>
 
