--- a/example/debug.html
+++ b/example/debug.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../_tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../.tmp/d3.compose.css">
   <style>
     .container {
       margin: 40px auto 0;
@@ -49,7 +49,7 @@
 
   <script src="../node_modules/d3/d3.js"></script>
   <script src="../node_modules/d3.chart/d3.chart.js"></script>
-  <script src="../_tmp/d3.compose-all.js"></script>
+  <script src="../.tmp/d3.compose-all.js"></script>
 
   <script src="../node_modules/jquery/dist/jquery.js"></script>
 
