--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../_tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../.tmp/d3.compose.css">
   <style>
     .example {
       margin-bottom: 16px;
@@ -26,7 +26,7 @@
   <script src="../node_modules/d3/d3.js"></script>
   <script src="../node_modules/d3.chart/d3.chart.js"></script>
 
-  <script src="../_tmp/d3.compose-all.js"></script>
+  <script src="../.tmp/d3.compose-all.js"></script>
 
   <script src="js/data.js"></script>
 </head>
