Convert Axis to new architecture

--- a/example/index.html
+++ b/example/index.html
@@ -206,7 +206,7 @@
               d3c.title('Results'),
               [
                 d3c.axisTitle('Results'),
-                d3c.axis('y', {scale: scales.y}),
+                d3c.axis('y', {scale: scales.y, gridlines: true}),
                 d3c.layered(charts)
               ]
             ];
