--- a/integration/charts/lines.html
+++ b/integration/charts/lines.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>d3.compose - bars</title>
+  <title>d3.compose - lines</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../.tmp/d3.compose.css">
   <style>
@@ -21,24 +21,28 @@
   </style>
 </head>
 <body>
-  <svg id="chart"></svg>
-  <svg id="chart2"></svg>
+  <div id="charts"></div>
 
   <script src="../../node_modules/d3/d3.js"></script>
   <script src="../../.tmp/d3.compose-all.js"></script>
   <script type="text/javascript">
-    function draw(props, id) {
-      d3c.render(d3c.lines(props), d3.select(id));
+    var charts = d3.select('#charts');
+    var id = 1;
+    function draw(props) {
+      var selection = charts.append('svg').attr('id', 'chart-' + (id++));
+      d3c.render(d3c.lines(props), selection);
     }
 
-    draw({data: [1, 3, 2]}, '#chart');
+    // Simple
+    draw({data: [1, 3, 2]});
 
+    // Series
     draw({
       data: [
         {values: [1, 3, 2, 4]},
         {values: [3, 2, 1, 0]}
       ]
-    }, '#chart2');
+    });
   </script>
 </body>
 </html>
