--- a/integration/charts/stacked-bars.html
+++ b/integration/charts/stacked-bars.html
@@ -28,7 +28,8 @@
     var id = 1;
     function draw(props) {
       var selection = charts.append('svg').attr('id', 'chart-' + (id++));
-      d3c.render(d3c.stackedBars(props), selection);
+      var container = new d3c.Compose(selection);
+      container.draw(d3c.stackedBars(props));
     }
 
     draw({
