--- a/integration/charts/bars.html
+++ b/integration/charts/bars.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../.tmp/d3.compose.css">
   <style>
-    svg {
+    .chart {
+      float: left;
       width: 400px;
-      height: 300px;
-      border: solid 1px #ccc;
       margin-right: 10px;
-      margin-bottom: 6px;
+      margin-bottom: 10px;
+    }
+    svg {
+      border: solid 1px #ccc;
     }
 
     .test {
@@ -29,7 +31,9 @@
     var charts = d3.select('#charts');
     var id = 1;
     function draw(props) {
-      var selection = charts.append('svg').attr('id', 'chart-' + (id++));
+      var selection = charts.append('div')
+        .attr('id', 'chart-' + (id++))
+        .attr('class', 'chart');
       var container = new d3c.Compose(selection);
       container.draw(d3c.bars(props));
     }
