--- a/integration/charts/labels.html
+++ b/integration/charts/labels.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../.tmp/d3.compose.css">
   <style>
-    svg {
+    .chart {
+      float: left;
       width: 400px;
-      height: 300px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+    svg {
       border: solid 1px #ccc;
     }
 
@@ -27,7 +31,9 @@
     var charts = d3.select('#charts');
     var id = 1;
     function draw(props) {
-      var selection = charts.append('svg').attr('id', 'chart-' + (id++));
+      var selection = charts.append('div')
+        .attr('id', 'chart-' + (id++))
+        .attr('class', 'chart');
       var container = new d3c.Compose(selection);
       container.draw(d3c.labels(props));
     }
