--- a/integration/charts/labels.html
+++ b/integration/charts/labels.html
@@ -35,10 +35,30 @@
         .attr('id', 'chart-' + (id++))
         .attr('class', 'chart');
       var container = new d3c.Compose(selection);
-      container.draw(d3c.labels(props));
+      container.draw(d3c.layered(
+        d3c.scatter(d3c.utils.assign({size: 32}, props)),
+        d3c.labels(props)
+      ));
     }
 
-    draw({data: [1, 2, 3], anchor: 'middle'});
+    draw({
+      data: [1, -2, 3],
+      xScale: d3.scale.linear().domain([-1, 3]),
+      yScale: d3.scale.linear().domain([-5, 5])
+    });
+
+    draw({
+      data: [1, -2, 3],
+      xScale: d3.scale.linear().domain([-1, 3]),
+      yScale: d3.scale.linear().domain([-5, 5]),
+
+      position: 'right|left',
+      offset: 5,
+      padding: 5,
+      format: function(value) {
+        return 'y = ' + value;
+      }
+    });
   </script>
 </body>
 </html>
