Update integration tests and cleanup

--- a/integration/compose.html
+++ b/integration/compose.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>d3.compose - compose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../.tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../build/d3.compose.css">
   <style>
     #charts {width: 600px;}
     path {stroke: black;}
@@ -15,7 +15,7 @@
   <div id="charts"></div>
 
   <script src="../node_modules/d3/d3.js"></script>
-  <script src="../.tmp/d3.compose-all.js"></script>
+  <script src="../build/d3.compose-all.js"></script>
   <script type="text/javascript">
     var charts = d3.select('#charts');
     var id = 1;
