--- a/integration/helpers/align-text.html
+++ b/integration/helpers/align-text.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>d3.compose - helpers.alignText</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../.tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../../build/d3.compose.css">
   <style>
     #chart {
       border: solid 1px #ccc;
@@ -31,7 +31,7 @@
   <svg id="chart"></svg>
 
   <script src="../../node_modules/d3/d3.js"></script>
-  <script src="../../.tmp/d3.compose-all.js"></script>
+  <script src="../../build/d3.compose-all.js"></script>
   <script type="text/javascript">
     var helpers = d3c.helpers;
     var getTranslate = helpers.getTranslate;
