Output -all as default

--- a/example/debug.html
+++ b/example/debug.html
@@ -49,7 +49,7 @@
 
   <script src="../node_modules/d3/d3.js"></script>
   <script src="../node_modules/d3.chart/d3.chart.js"></script>
-  <script src="../.tmp/d3.compose-all.js"></script>
+  <script src="../.tmp/d3.compose.js"></script>
 
   <script src="../node_modules/jquery/dist/jquery.js"></script>
 
