--- a/integration/helpers/align-text.html
+++ b/integration/helpers/align-text.html
@@ -31,7 +31,7 @@
   <svg id="chart"></svg>
 
   <script src="../../node_modules/d3/d3.js"></script>
-  <script src="../../build/d3.compose-all.js"></script>
+  <script src="../../build/d3.compose.js"></script>
   <script type="text/javascript">
     var helpers = d3c.helpers;
     var getTranslate = helpers.getTranslate;
