--- a/example/index.html
+++ b/example/index.html
@@ -24,7 +24,7 @@
   </style>
 
   <script src="../node_modules/d3/d3.js"></script>
-  <script src="../build/d3.compose-all.js"></script>
+  <script src="../build/d3.compose.js"></script>
   <script src="js/data.js"></script>
 </head>
 <body>
